--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="flex-one">
             <div class="one">
                 <label for="input">
-                    < input >
+                    < input\>
                     <br>
                     Label
                 </label>
